# ldlt_latency_artifacts

./: LICENSE  README.md  const.xdc  pyproject.toml  vivado_sim_design.tcl  vivado_synth_design.tcl
comparison/separate_N16_eq_f300MHz_addsub1_mul1/synth/: run_sim.tcl  run_synth.tcl
comparison/separate_N16_eq_f300MHz_addsub1_mul1/vhdl/: addsub0.vhdl  in0.vhdl  ldlt.vhdl  memory0.vhdl  memory1.vhdl  memory2.vhdl  memory3.vhdl  mul0.vhdl  neg0.vhdl  out0.vhdl  rec0.vhdl  tb.vhdl
comparison/separate_N16_mult_f300MHz_addsub2_mul3/synth/: run_synth.tcl
comparison/separate_N16_mult_f300MHz_addsub2_mul3/vhdl/: addsub0.vhdl  addsub1.vhdl  ldlt.vhdl  memory0.vhdl  memory1.vhdl  memory10.vhdl  memory11.vhdl  memory2.vhdl  memory3.vhdl  memory4.vhdl  memory5.vhdl  memory6.vhdl  memory7.vhdl  memory8.vhdl  memory9.vhdl  mul1.vhdl  tb.vhdl
hw/: .gitignore  vivado_synth_design.tcl
hw/comparison/addsub_N16_eqs_f300MHz_latA5_latM4_latF11_latR14_addsub1_mul1/: addsub0.vhdl  in0.vhdl  ldlt.vhdl  memory0.vhdl  memory1.vhdl  memory3.vhdl  mul0.vhdl  neg0.vhdl
hw/comparison/addsub_N16_mult_f300MHz_latA5_latM4_latF11_latR14_addsub2_mul3/: addsub0.vhdl  addsub1.vhdl  ldlt.vhdl  memory0.vhdl  memory1.vhdl  memory11.vhdl  memory2.vhdl  memory3.vhdl  memory4.vhdl  mul0.vhdl  mul1.vhdl  neg0.vhdl  out0.vhdl  rec0.vhdl
hw/n16/: results.csv  tmp_results.csv
hw/n4/: results.csv
hw/n8/: results.csv
hw/new/: analyze_run.py
hw/new/comp/: results.csv
hw/new/n16/: results_first.csv  results_le.csv
hw/new/n4/: results.csv
hw/new/n8/: results.csv
(+1191 files in other folders)
